@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-06T16:28:51Z",
+  "timestamp" : "2022-08-12T16:36:20Z",
   "count_outdated" : 259,
   "uniques_outdated" : 61,
-  "count" : 283,
-  "uniques" : 65,
+  "count" : 284,
+  "uniques" : 66,
   "views" : [
     {
       "timestamp": "2022-08-01T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
