@@ -1,6 +1,6 @@
 {
-  "count": 24,
-  "uniques": 3,
+  "count": 25,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-08-01T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
